--- a/src/components/AgencyLocation.astro
+++ b/src/components/AgencyLocation.astro
@@ -66,7 +66,7 @@ import Button from './subcomponents/Button.astro';
                     formulaire de contact
                 </p>
             </div>
-            <Button text="contacter l’agence" url="/contact#contact-form" variant="dark" />
+            <Button text="CONTACT" url="/contact#contact-form" variant="dark" />
         </div>
     </div>
 </div>
