--- a/src/components/Icons/FlecheIcon.astro
+++ b/src/components/Icons/FlecheIcon.astro
@@ -1,6 +1,13 @@
 <!--?xml version="1.0" encoding="UTF-8"?-->
-<svg id="Calque_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 112.24 40.24" fill="currentColor" class="w-10 h-10"
-    ><polygon
-        points="87.88 36 92.12 40.24 112.24 20.12 92.12 0 87.88 4.24 100.76 17.12 0 17.12 0 23.12 100.76 23.12 87.88 36"
-    ></polygon></svg
+<svg
+    id="Calque_1"
+    data-name="Calque 1"
+    xmlns="http://www.w3.org/2000/svg"
+    viewBox="130 0 112.24 30.24"
+    fill="currentColor"
+    class="w-10 h-10"
 >
+    <path
+        d="M214.9,30.06l14.05-14.16-88.45,.35c-.28,0-.5-.22-.5-.5s.22-.5,.5-.5l88.45-.35L214.78,.85c-.1-.1-.15-.23-.15-.35s.05-.26,.15-.35c.19-.2,.51-.2,.71,0l15.02,14.9s.08,.1,.11,.16c.05,.12,.05,.26,0,.38-.03,.06-.06,.12-.11,.16l-14.9,15.02c-.19,.2-.51,.2-.71,0s-.2-.51,0-.71Z"
+    ></path>
+</svg>
