--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -34,13 +34,13 @@ import SubFooter from './SubFooter.astro';
       </div>
       <div class="flex flex-col gap-3 select-none w-[200px]">
         <p class="font-larken">EN SAVOIR PLUS</p>
-        <a href="/a-propos" class="hover:text-marron_fonce">À PROPOS</a>
+        <a href="/a-propos" class="hover:text-marron_fonce">L'ATELIER</a>
         <a
           href="https://www.instagram.com/jolilot.atelier/"
           aria-label="Ma page instagram @jolilot.atelier"
           target="_blank"
           referrerpolicy="no-referrer"
-          class="hover:text-marron_fonce">RÉALISATIONS</a
+          class="hover:text-marron_fonce">PROJETS</a
         >
         <a href="/contact" class="hover:text-marron_fonce">CONTACT</a>
       </div>
