--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -9,7 +9,7 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
   >
     <a href="/" aria-label="Retour a la page d'accueil"><LogoIcon classes="md:w-[150px] w-[100px] py-10" /></a>
     <div class="flex gap-10 max-md:hidden text-sm">
-      <a href="/a-propos" class="hover:text-orange">À PROPOS</a>
+      <a href="/a-propos" class="hover:text-orange">L'ATELIER</a>
       <div class="relative">
         <button id="open-close-services" class="hover:text-orange cursor-pointer">SERVICES</button>
         <div id="services-dropdown" class="hidden">
@@ -31,7 +31,7 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
         aria-label="Ma page instagram @jolilot.atelier"
         target="_blank"
         referrerpolicy="no-referrer"
-        class="hover:text-orange pl-9">RÉALISATIONS</a
+        class="hover:text-orange pl-9">PROJETS</a
       >
     </div>
     <button
@@ -54,7 +54,7 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
     </button>
     <div id="mobile-menu-container" class="hidden fixed z-50 top-0 bottom-0 left-0 right-0 bg-background">
       <div class="flex flex-col items-center justify-center h-full gap-6">
-        <a href="/a-propos" class="hover:text-orange">À PROPOS</a>
+        <a href="/a-propos" class="hover:text-orange">L'ATELIER</a>
         <div class="group relative">
           <button class="hover:text-orange cursor-pointer">SERVICES</button>
           <div
@@ -74,7 +74,7 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
           aria-label="Ma page instagram @jolilot.atelier"
           target="_blank"
           referrerpolicy="no-referrer"
-          class="hover:text-orange pt-8">RÉALISATIONS</a
+          class="hover:text-orange pt-8">PROJETS</a
         >
       </div>
     </div>
