--- a/src/components/AgencyLastProjects.astro
+++ b/src/components/AgencyLastProjects.astro
@@ -44,6 +44,6 @@ const projects = [
     </div>
   </div>
   <div class="flex justify-center mt-10">
-    <Button text="contacter l'agence" variant="dark" url="/contact#contact-form" />
+    <Button text="CONTACT" variant="dark" url="/contact#contact-form" />
   </div>
 </div>
