--- a/src/layouts/SubFooter.astro
+++ b/src/layouts/SubFooter.astro
@@ -93,7 +93,7 @@ const PostsInstagram = [
     </div>
 </div>
 
-<script type="module">
+<script type="module" async defer>
 import Glide from 'https://unpkg.com/@glidejs/glide@3.6.0/dist/glide.esm.js';
 
 new Glide('.glidef', {
