Reverse async on script

--- a/src/components/AgencySteps.astro
+++ b/src/components/AgencySteps.astro
@@ -48,7 +48,7 @@ const { bgColor, services, titleColor } = Astro.props;
   }
 </style>
 
-<script type="module" async defer>
+<script type="module">
 import Glide from 'https://unpkg.com/@glidejs/glide@3.6.0/dist/glide.esm.js';
 
 new Glide('.glide', {
