--- a/src/layouts/SubFooter.astro
+++ b/src/layouts/SubFooter.astro
@@ -100,7 +100,7 @@ const PostsInstagram = [
     </div>
 </div>
 
-<script type="module" async defer>
+<script type="module" >
 import Glide from 'https://unpkg.com/@glidejs/glide@3.6.0/dist/glide.esm.js';
 
 new Glide('.glidef', {
