Reverse script in async and change media for css

--- a/src/layouts/SubFooter.astro
+++ b/src/layouts/SubFooter.astro
@@ -100,7 +100,7 @@ const PostsInstagram = [
     </div>
 </div>
 
-<script type="module" >
+<script type="module" async defer>
 import Glide from 'https://unpkg.com/@glidejs/glide@3.6.0/dist/glide.esm.js';
 
 new Glide('.glidef', {
@@ -119,5 +119,5 @@ new Glide('.glidef', {
             perView: 1,
         },
     },
-    }).mount();
+}).mount();
 </script>
