--- a/src/components/PhotosCarrousel.astro
+++ b/src/components/PhotosCarrousel.astro
@@ -63,7 +63,7 @@ const Photos = [
     </div>
 </div>
 
-<script type="module">
+<script type="module" async defer>
 import Glide from 'https://unpkg.com/@glidejs/glide@3.6.0/dist/glide.esm.js';
 
 new Glide('.glidep', {
