--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,11 +20,7 @@ import Header from './Header.astro';
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="generator" content="Jolilot Atelier" />
     <title>{'JOLILOT Atelier | Agence créative'}</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.css"
-      media="print"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.css" />
   </head>
   <body class="flex flex-col bg-background font-extralight text-xs">
     <Header />
