--- a/src/components/PhotosCarrousel.astro
+++ b/src/components/PhotosCarrousel.astro
@@ -39,8 +39,8 @@ const Photos = [
 ];
 ---
 
-<div class="py-4 flex px-8 md:px-24 flex-col items-center">
-    <div class="glide glidep max-w-[1600px]">
+<div class="py-4 flex px-4 md:px-4 flex-col items-center">
+    <div class="glide glidep ">
         <div class="glide__track" data-glide-el="track">
             <ul class="glide__slides">
                 {
@@ -70,7 +70,7 @@ new Glide('.glidep', {
     startAt: 0,
     perView: 6,
     type: 'carousel',
-    gap: 25,
+    gap: 17,
     breakpoints: {
         1024: {
             perView: 4,
