Upgrade to astro v3

--- a/src/components/AgencyPresentation.astro
+++ b/src/components/AgencyPresentation.astro
@@ -1,8 +1,9 @@
 ---
-import { Image } from '@astrojs/image/components';
+import { Image } from 'astro:assets';
 
 import LogoWithProgressBar from './subcomponents/LogoWithProgressBar.astro';
 import Button from './subcomponents/Button.astro';
+import type { ImageMetadata } from 'astro';
 
 export type Props = PresentationProps;
 
