--- a/src/components/AgencyClientsNumber.astro
+++ b/src/components/AgencyClientsNumber.astro
@@ -1,5 +1,6 @@
 ---
-import { Image } from '@astrojs/image/components';
+import type { ImageMetadata } from 'astro';
+import { Image } from 'astro:assets';
 
 export type Props = {
   photo: ImageMetadata;
