--- a/src/components/AgencyLocation.astro
+++ b/src/components/AgencyLocation.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from '@astrojs/image/components';
+import { Image } from 'astro:assets';
 
 import PhotoTelephone from '../assets/JOLILOT-69.webp';
 import PhotoAgence from '../assets/JOLILOT-1-copie.webp';
