--- a/src/components/PhotosCarrousel.astro
+++ b/src/components/PhotosCarrousel.astro
@@ -1,10 +1,9 @@
 ---
-import { Image } from '@astrojs/image/components';
-import Insta1 from '../assets/JOLILOT-47.webp';
-import Insta2 from '../assets/JOLILOT-58.webp';
-import Insta3 from '../assets/JOLILOT-69.webp';
-import Insta4 from '../assets/JOLILOT-16.webp';
-import FlecheIcon from './Icons/FlecheIcon.astro';
+import { Image } from 'astro:assets';
+import Insta1 from '@assets/JOLILOT-47.webp';
+import Insta2 from '@assets/JOLILOT-58.webp';
+import Insta3 from '@assets/JOLILOT-69.webp';
+import Insta4 from '@assets/JOLILOT-16.webp';
 const Photos = [
     {
         url: 'https://www.instagram.com/p/CpSPcYJMCf2/',
